<resources>
    <string name="add">Add</string>
    <string name="add_business">Add Business</string>
    <string name="add_stock">Add Stock</string>
    <string name="advance">Advance</string>
    <string name="app_name">CashFlow Auditor</string>
    <string name="ask_debt">Ask Debt</string>
    <string name="business">Business</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_payment">Cancel Payment</string>
    <string name="car_loan">Car Loan</string>
    <string name="car_loan_payment">Car Loan Payment</string>
    <string name="cash_flow">Cash Flow</string>
    <string name="child">Children</string>
    <string name="cost">Cost</string>
    <string name="credit_card">Credit Card</string>
    <string name="credit_card_payment">Credit Card Payment</string>
    <string name="delete">Delete</string>
    <string name="down_pay">Down Pay</string>
    <string name="error_fill_all_fields">All fields must be filled.</string>
    <string name="home_mortgage">Home Mortgage</string>
    <string name="home_mortgage_payment">Home Mortgage Payment</string>
    <string name="lbl_amount">Amount</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_value">Value</string>
    <string name="loan">Loan</string>
    <string name="loan_payment">Loan Payment</string>
    <string name="other_expenses">Other Expenses</string>
    <string name="child_expenses">Child Expenses</string>
    <string name="passive_income">Passive Income:</string>
    <string name="paid">Paid</string>
    <string name="pay">Pay</string>
    <string name="per_child_expense">Per Child Expense:</string>
    <string name="profession">Profession:</string>
    <string name="random">Random</string>
    <string name="reset">Reset</string>
    <string name="retail_debt">Retail Debt</string>
    <string name="retail_payment">Retail Payment</string>
    <string name="salary">Salary</string>
    <string name="school_loan">School Loan</string>
    <string name="school_loan_payment">School Loan Payment</string>
    <string name="stocks">Stocks</string>
    <string name="success_item_saved">Item saved successfully.</string>
    <string name="tab_assets">Assets</string>
    <string name="tab_expenses">Expenses</string>
    <string name="tab_income">Income</string>
    <string name="tab_liabilities">Liabilities</string>
    <string name="tab_profession">Profession</string>
    <string name="tab_resume">Resume</string>
    <string name="taxes">Taxes</string>
    <string name="total_income">Total Income</string>
</resources>
