<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cashFlowAuditor.Fragments.StockFragment"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/assets_profession"
        android:textColor="@color/black"
        android:textSize="@dimen/profession_title_size"
        android:gravity="center_horizontal"
        android:paddingTop="5sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_ly_stock"
        android:gravity="right"
        android:paddingRight="15sp"
        android:layout_below="@id/assets_profession">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/add_stock"
            android:textColor="@color/white"
            android:padding="10sp"
            android:textAllCaps="false"
            android:id="@+id/btn_add_stock"
            android:textSize="@dimen/text_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:id="@+id/headers_stock"
        android:layout_below="@+id/btn_ly_stock">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_name"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_amount"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="@dimen/text_size"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_value"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="@dimen/text_size"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container_stock"
        android:layout_below="@id/headers_stock">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/assets_stock_list"
            />
    </LinearLayout>

</RelativeLayout>